# netwatch

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CHANGELOG.md  CNAME  Cargo.toml  LICENSE.md  README.md  testing.txt
.github/workflows/: AndroidEmulator.yml  android.yml  android_emulator.yml  apk.yml  builder.yml  createAPK.yml  jekyll-gh-pages.yml  librs.yml  linter.yaml  linter.yml  rust.yml  rustFormatter.yml  testing.yml
Documentation/: Architecture.md
docs/: README.md  _config.yml
docs/_posts/: 2024 06-14-prototype.md  2024-04-06-next-steps.md  2024-04-30-architecture.md  2024-04-30-codeex.md  2024-04-30-tee&se.md  2024-04-30-test.md  2024-05-03-used-crates.md  2024-05-06-getting_started.md  2024-05-08-pre-commit-hook.md  2024-05-27-CI-CD-Pipeline.md  2024-06-14-prototype.md  2024-5-27-Our-Testing-Paradigm.md  pre-commit-hook.md
docs/_tabs/: 2024-04-06-next-steps.md  WTF.md  about.md  (+7 more)
documentation/: .gitmodules  README.md  _config.yml  index.html
prototyp/: build.gradle.kts  settings.gradle.kts
prototype_rust_wrapper/: Cargo.toml  Makefile  env.bash
prototype_rust_wrapper/src/: lib.rs
rust_android/rust/: Cargo.toml  Makefile
rust_android/rust/src/: keystore.rs  lib.rs  logger.rs
rust_android/rust/src/android/: mod.rs
rust_android/rust/src/wrapper/: mod.rs
rust_crypto/: .gitignore  Cargo.toml
rust_robusta/: Cargo.toml  Makefile  xd.txt
rust_robusta/src/: crypto_layer.rs  lib.rs  logger.rs  thread_func.rs
rust_robusta/src/android_classes/: builder.rs  key_pair.rs  key_pair_generator.rs  mod.rs
rust_robusta/src/key_generation/: key.rs  key_pair.rs  key_pair_generator.rs
rust_robusta/src/key_store/: key_store.rs  signature.rs
src/: lib.rs  main.rs
tests/: integration_test.rs  whatToTest.txt
(+83 files in other folders)
