[package]
name = "prototype_rust_wrapper"
version = "0.1.0"
edition = "2021"

[lib]
name = "prototype_rust_wrapper"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robusta_jni = "*"
bytemuck = "1.15.0"
crypto-layer = { git = "https://github.com/cep-sose2024/rust-crypto-netwatch.git", features = ["tpm", "android"] }
tracing = "0.1.40"