[package]
name = "rust_robusta"
version = "0.1.0"
edition = "2021"

[lib]
name = "rust_robusta"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
robusta_jni = "0.2"
android_logger = "^0"
log = "^0"
base64 = "0.22.0"