[package]
name = "rust"
version = "0.1.0"
edition = "2021"


[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.21.1", default-features = false }

[lib]
crate-type = ["dylib"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jni = { version = "0.21.1", default-features = false, features = ['invocation'] }
anyhow = "*"
libloading = "*"